- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P2: Important
 - 
    5.12.3
 
- 
        30480ad795c3b7c9680b51f03a301dd67e277036
 
Setting the user parameter for QModbusDevice is not taken into account which makes controlling the underlying device impossible.
The access to the device used should also be exposed for more fine grained control ( i.e. returning a pointer to the QSerialPort or QTcpSocket used for communication).