Deprecate the 'UserParameter' enum value

There is no way to properly set the parameters on the underlying
QIODevice, so it makes no sense to store these values without
being able to ever use them.

Task-number: QTBUG-76232
Change-Id: I9665af8392b844ada6d595b58641cbb13a259689
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>