src/serialbus/qmodbusdevice.h
@@ -82,7 +82,7 @@ public:
         NetworkAddressParameter,
 
         // Reserved
-        UserParameter = 0x100
+        UserParameter = 0x100 // ### Qt6: remove
     };
     Q_ENUM(ConnectionParameter)
 
